fixing avatar css and image stretching issues

--- a/public/css/components/Avatar.css
+++ b/public/css/components/Avatar.css
@@ -1,3 +1,4 @@
 .Avatar {
   border-radius: 50%;
+  margin: auto;
 }
