--- a/public/css/components/ProfileForm.css
+++ b/public/css/components/ProfileForm.css
@@ -1,5 +1,5 @@
 .ProfileForm {
-  padding-top: calc(var(--spacing) * 2);
+  padding-top: calc(var(--spacing) * 1);
 }
 
 .ProfileForm-label {
